load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sem",
    srcs = [
        "restricted_statement.go",
        "sem.go",
        "strict_sem.go",
    ],
    importpath = "github.com/pingcap/tidb/util/sem",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//parser/ast",
        "//parser/mysql",
        "//sessionctx/variable",
        "//util/dbterror",
        "//util/logutil",
        "@com_github_pingcap_errors//:errors",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "sem_test",
    timeout = "short",
    srcs = [
        "main_test.go",
        "sem_test.go",
    ],
    embed = [":sem"],
    flaky = True,
    deps = [
        "//parser/mysql",
        "//sessionctx/variable",
        "//testkit/testsetup",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_goleak//:goleak",
    ],
)
