load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backend",
    srcs = [
        "backend.go",
        "etcd.go",
    ],
    importpath = "github.com/pingcap/tidb/util/serverless/tidbworker/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//ddl/util",
        "@com_github_tikv_client_go_v2//tikv",
        "@io_etcd_go_etcd_client_v3//:client",
    ],
)
