load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "remote",
    srcs = ["remote.go"],
    importpath = "github.com/pingcap/tidb/br/pkg/lightning/backend/remote",
    visibility = ["//visibility:public"],
    deps = [
        "//br/pkg/lightning/backend",
        "//br/pkg/lightning/backend/kv",
        "//br/pkg/lightning/backend/local",
        "//br/pkg/lightning/checkpoints",
        "//br/pkg/lightning/common",
        "//br/pkg/lightning/config",
        "//br/pkg/lightning/glue",
        "//br/pkg/lightning/log",
        "//br/pkg/lightning/metric",
        "//br/pkg/pdutil",
        "//parser/model",
        "//table",
        "@com_github_google_uuid//:uuid",
        "@com_github_pingcap_errors//:errors",
        "@com_github_pingcap_kvproto//pkg/resource_manager",
        "@com_github_tikv_client_go_v2//oracle",
        "@com_github_tikv_client_go_v2//tikv",
        "@com_github_tikv_pd_client//resource_group/controller",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_zap//:zap",
    ],
)
